--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -15,6 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>{% block title %}{% endblock %}</title>
 
+    {% block style %}{% endblock %}
+
   </head>
   <body style="background-color: #121212; color: white;">
       {% block nav %}{% endblock %}
