--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -198,7 +198,7 @@
         <form>
         <div class="user-box" method="POST" action="/login">
             <input required="" name="" type="text">
-            <label>Email</label>
+            <label>Usernme</label>
         </div>
         <div class="user-box">
             <input required="" name="" type="password">
