--- a/App/templates/signup.html
+++ b/App/templates/signup.html
@@ -195,24 +195,25 @@
 
     <div class="login-box">
         <p>Login</p>
-        <form  method="POST" action="/login">
+        <form  method="POST" action="/signup">
             <div class="user-box">
                 <input required="" name="" type="text">
-                <label>Email</label>
+                <label>Username</label>
             </div>
             <div class="user-box">
                 <input required="" name="" type="password">
                 <label>Password</label>
             </div>
-            <a href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                Submit
-            </a>
+            <div>
+                <div>
+                    <input type="submit" class="blue text-white btn" value="Sign up">
+                </div>
+                <div>
+                    <a href="/login" class="a2">Login Here!</a>
+                </div>
+            </div>
         </form>
-        <p>Don't have an account? <a href="/signup" class="a2">Sign up!</a></p>
+        <!-- <p>Have an account? <a href="/login" class="a2">Login Here!</a></p> -->
     </div>
 
 {% endblock %}
