--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -195,18 +195,18 @@
 
 <div class="login-box">
     <p>Login</p>
-    <form  method="POST" action="/login">
+    <form method="POST" action="/login">
         <div class="user-box">
-            <input required="" name="" type="text">
+            <input value="bob" name="username" type="text" class="validate" required>
             <label>Username</label>
         </div>
         <div class="user-box">
-            <input required="" name="" type="password">
+            <input value="bobpass" name="password" type="password" class="validate" required>
             <label>Password</label>
         </div>
         <div>
             <div>
-                <input type="submit" class="blue text-white btn" value="Login">
+                <button type="submit" class="btn waves-effect waves-light">Login</button>
             </div>
             <div>
                 <a href="/signup" class="a2">signup Here!</a>
