Fixed SignUp Page Value

--- a/App/templates/signup.html
+++ b/App/templates/signup.html
@@ -197,11 +197,11 @@
         <p>Login</p>
         <form  method="POST" action="/signup">
             <div class="user-box">
-                <input value="bob" name="username" type="text" class="validate" required>
+                <input value="" name="username" type="text" class="validate" required>
                 <label>Username</label>
             </div>
             <div class="user-box">
-                <input value="bobpass" name="password" type="password" class="validate" required>
+                <input value="" name="password" type="password" class="validate" required>
                 <label>Password</label>
             </div>
             <div>
