helix login work

--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -24,7 +24,7 @@
     <div class="container" id="content" style="margin: 0px">{% block content %}{% endblock %}</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
+    <!-- <script>
        M.AutoInit();
 
         {% with messages = get_flashed_messages() %}
@@ -35,6 +35,6 @@
           {% endif %}
         {% endwith %}
        
-    </script>
+    </script> -->
   </body>
 </html>
