--- a/App/templates/signup.html
+++ b/App/templates/signup.html
@@ -194,19 +194,19 @@
 {% block content %}
 
     <div class="login-box">
-        <p>Login</p>
+        <p>Sign Up</p>
         <form  method="POST" action="/signup">
             <div class="user-box">
-                <input required="" name="" type="text">
+                <input name="username" type="text" class="validate" required>
                 <label>Username</label>
             </div>
             <div class="user-box">
-                <input required="" name="" type="password">
+                <input name="password" type="password" class="validate" required>
                 <label>Password</label>
             </div>
             <div>
                 <div>
-                    <input type="submit" class="blue text-white btn" value="Sign up">
+                    <button type="submit" class="blue text-white btn" value="Sign up">
                 </div>
                 <div>
                     <a href="/login" class="a2">Login Here!</a>
