--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -197,12 +197,11 @@
     <p>Login</p>
     <form method="POST" action="/login">
         <div class="user-box">
-
-            <input  name="username" type="text" class="validate" required>
+            <input  name="username" value="bob" type="text" class="validate" required>
             <label>Username</label>
         </div>
         <div class="user-box">
-            <input  name="password" type="password" class="validate" required>
+            <input  name="password" value="bobpass" type="password" class="validate" required>
             <label>Password</label>
         </div>
         <div>
