--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -209,7 +209,7 @@
                 <button type="submit" class="btn waves-effect waves-light">Login</button>
             </div>
             <div>
-                <a href="/signup" class="a2">signup Here!</a>
+                <a href="/signup" style="font-size: 10px">Don't have an account? SignUp!</a>
             </div>
         </div>
     </form>
