--- a/App/templates/signup.html
+++ b/App/templates/signup.html
@@ -209,7 +209,7 @@
                     <button type="submit" class="btn waves-effect waves-light">Sign Up</button>
                 </div>
                 <div>
-                    <a href="/login" class="a2">Login Here!</a>
+                    <a href="/login" style="font-size: 10px">Already have an account? Login!</a>
                 </div>
             </div>
         </form>
